--- a/res/layout/fragment_kontoverwaltung.xml
+++ b/res/layout/fragment_kontoverwaltung.xml
@@ -34,8 +34,8 @@
                 android:id="@+id/neuesKontoAnlegen"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
                 android:layout_weight="1.0"
                 android:background="@layout/button_custom"
                 android:onClick="neuesBankkontoAnlegen"
@@ -44,12 +44,11 @@
                 android:visibility="visible" />
         </LinearLayout>
 
-
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="@android:color/darker_gray" />
-        
+
         <TextView
             android:id="@+id/textView93"
             android:layout_width="wrap_content"
@@ -74,8 +73,8 @@
                 android:id="@+id/neueSperrrufnummerAnlegen"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
                 android:layout_weight="1.0"
                 android:background="@layout/button_custom"
                 android:onClick="neueSperrrufnummerAnlegen"
@@ -84,13 +83,48 @@
                 android:visibility="visible" />
         </LinearLayout>
 
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray" />
+
+        <TextView
+            android:id="@+id/textView94"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="15dp"
+            android:text="Hiermit werden alle hinterlegten Sperrrufnummern gelöscht."
+            android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="15dp"
+            android:layout_marginTop="0dp"
+            android:orientation="horizontal"
+            android:paddingBottom="1.0dip"
+            android:paddingLeft="4.0dip"
+            android:paddingRight="4.0dip"
+            android:paddingTop="5.0dip" >
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_margin="5dp"
+                android:layout_weight="1.0"
+                android:background="@layout/button_custom"
+                android:onClick="alleRufnummernLoeschen"
+                android:text="Sperrrufnummern löschen"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+        </LinearLayout>
 
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
             android:background="@android:color/darker_gray" />
-        
-       
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -121,8 +155,8 @@
                     android:id="@+id/einbankkontoentfernen"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
-                    android:layout_marginTop="5dp"
                     android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
                     android:layout_weight="1.0"
                     android:background="@layout/button_custom"
                     android:onClick="bankkontoEntfernen"
@@ -159,8 +193,8 @@
                     android:id="@+id/delete_account"
                     android:layout_width="wrap_content"
                     android:layout_height="fill_parent"
-                    android:layout_marginTop="5dp"
                     android:layout_marginRight="5dp"
+                    android:layout_marginTop="5dp"
                     android:layout_weight="1.0"
                     android:background="@layout/button_custom"
                     android:onClick="deleteAccount"
