--- a/res/layout/fragment_impressum.xml
+++ b/res/layout/fragment_impressum.xml
@@ -14,13 +14,35 @@
             android:id="@+id/textView23"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="top|center"
             android:layout_marginBottom="25dp"
             android:layout_marginTop="20dp"
-            android:text="@string/title_section8"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
-
+            android:text="@string/impressumsite"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+         
         <TextView
             android:id="@+id/textView30"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/max"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/textView34"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/daniel"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/textView35"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/betreuer"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <TextView
+            android:id="@+id/textView36"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
