--- a/res/layout/fragment_kontoverwaltung.xml
+++ b/res/layout/fragment_kontoverwaltung.xml
@@ -97,7 +97,7 @@
             android:text="Hiermit werden alle hinterlegten Sperrrufnummern gelöscht."
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
-        <LinearLayout
+       <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
@@ -109,15 +109,17 @@
             android:paddingTop="5.0dip" >
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/btn2"
                 android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
-                android:layout_margin="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"
                 android:layout_weight="1.0"
                 android:background="@layout/button_custom"
                 android:onClick="alleRufnummernLoeschen"
                 android:text="Sperrrufnummern löschen"
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:visibility="visible" />
         </LinearLayout>
 
         <View
