--- a/res/layout/fragment_umsatzanzeige.xml
+++ b/res/layout/fragment_umsatzanzeige.xml
@@ -41,7 +41,7 @@
             android:layout_marginLeft="0dp" >
 
             <!-- Umsatz 1 ANFANG -->
-
+ <!--
             <TableRow
                 android:id="@+id/tableRow4"
                 android:layout_width="wrap_content"
@@ -89,7 +89,7 @@
                     android:gravity="right"
                     android:text="date1"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
-            </TableRow>
+            </TableRow>-->
 
             <!-- Umsatz 1 ENDE -->
 
