umsatzanzeige farben, usw
fast fertig alles yay

--- a/res/layout/fragment_umsatzanzeige.xml
+++ b/res/layout/fragment_umsatzanzeige.xml
@@ -25,7 +25,7 @@
                     android:id="@+id/textView8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Kontoauswahl"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
 
                 <Spinner
@@ -41,7 +41,7 @@
             android:layout_marginLeft="0dp" >
 
             <!-- Umsatz 1 ANFANG -->
-
+ <!--
             <TableRow
                 android:id="@+id/tableRow3"
                 android:layout_width="wrap_content"
@@ -96,7 +96,7 @@
                     android:text="counteracc1"
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
-
+-->
             <!-- Umsatz 1 ENDE -->
 
 
@@ -114,9 +114,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="20dp"
-                    android:text="date2"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
-
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textStyle="bold" />
+					
                 <TextView
                     android:id="@+id/umsatzmoney2"
                     android:layout_width="wrap_content"
@@ -124,8 +125,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:gravity="right"
-                    android:text="money2"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall" 
+                    android:textStyle="bold"/>
             </TableRow>
 
             <TableRow
@@ -139,7 +141,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="umsatztransactiontext2"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -153,7 +155,7 @@
                     android:id="@+id/umsatzcounterAccount2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="counteracc2"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -174,8 +176,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="20dp"
-                    android:text="date3"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall" 
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/umsatzmoney3"
@@ -184,8 +187,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:gravity="right"
-                    android:text="money3"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall" 
+                    android:textStyle="bold"/>
             </TableRow>
 
             <TableRow
@@ -199,7 +203,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="umsatztransactiontext3"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -213,7 +217,7 @@
                     android:id="@+id/umsatzcounterAccount3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="counteracc3"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -234,8 +238,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="20dp"
-                    android:text="date4"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall" 
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/umsatzmoney4"
@@ -244,8 +249,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:gravity="right"
-                    android:text="money4"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textStyle="bold" />
             </TableRow>
 
             <TableRow
@@ -259,7 +265,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="umsatztransactiontext4"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -273,7 +279,7 @@
                     android:id="@+id/umsatzcounterAccount4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="counteracc4"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -294,8 +300,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="20dp"
-                    android:text="date5"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/umsatzmoney5"
@@ -304,8 +311,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:gravity="right"
-                    android:text="money5"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textStyle="bold" />
             </TableRow>
 
             <TableRow
@@ -319,7 +327,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="umsatztransactiontext5"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -333,7 +341,7 @@
                     android:id="@+id/umsatzcounterAccount5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="counteracc5"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -354,8 +362,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="20dp"
-                    android:text="date6"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/umsatzmoney6"
@@ -364,8 +373,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:gravity="right"
-                    android:text="money6"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall" 
+                    android:textStyle="bold"/>
             </TableRow>
 
             <TableRow
@@ -379,7 +389,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="umsatztransactiontext6"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -393,7 +403,7 @@
                     android:id="@+id/umsatzcounterAccount6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="counteracc6"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -414,8 +424,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="20dp"
-                    android:text="date7"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/umsatzmoney7"
@@ -424,8 +435,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:gravity="right"
-                    android:text="money7"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall" 
+                    android:textStyle="bold"/>
             </TableRow>
 
             <TableRow
@@ -439,7 +451,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="umsatztransactiontext7"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -453,7 +465,7 @@
                     android:id="@+id/umsatzcounterAccount7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="counteracc7"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -474,8 +486,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="20dp"
-                    android:text="date8"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall" 
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/umsatzmoney8"
@@ -484,8 +497,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:gravity="right"
-                    android:text="money8"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textStyle="bold" />
             </TableRow>
 
             <TableRow
@@ -499,7 +513,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="umsatztransactiontext8"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -513,7 +527,7 @@
                     android:id="@+id/umsatzcounterAccount8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="counteracc8"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
             <!-- Umsatz 8 ENDE -->
@@ -533,8 +547,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="20dp"
-                    android:text="date9"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall" 
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/umsatzmoney9"
@@ -543,8 +558,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:gravity="right"
-                    android:text="money9"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall" 
+                    android:textStyle="bold"/>
             </TableRow>
 
             <TableRow
@@ -558,7 +574,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="umsatztransactiontext9"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -572,7 +588,7 @@
                     android:id="@+id/umsatzcounterAccount9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="counteracc9"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -593,8 +609,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
                     android:layout_marginTop="20dp"
-                    android:text="date10"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall" 
+                    android:textStyle="bold"/>
 
                 <TextView
                     android:id="@+id/umsatzmoney10"
@@ -603,8 +620,9 @@
                     android:layout_marginLeft="10dp"
                     android:layout_marginTop="20dp"
                     android:gravity="right"
-                    android:text="money10"
-                    android:textAppearance="?android:attr/textAppearanceSmall" />
+                    android:text=""
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:textStyle="bold" />
             </TableRow>
 
             <TableRow
@@ -618,7 +636,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:text="umsatztransactiontext10"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
@@ -632,7 +650,7 @@
                     android:id="@+id/umsatzcounterAccount10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="counteracc10"
+                    android:text=""
                     android:textAppearance="?android:attr/textAppearanceSmall" />
             </TableRow>
 
